# snapdragon

./: .gitignore  .gitmodules  .travis.yml  COPYING  Makefile.am  Makefile.in  README  README.md  STYLE  aclocal.m4  config.h.in  configure  configure.ac  libtool  package.json
countkmers/: Makefile  Makefile.am  Makefile.in  bvec.cpp  bvec.h  bvec32.cpp  bvec32.h  bvec64.cpp  bvec64.h  count16mers.cpp  fq_16to32kmers.cpp  fq_kmers.cpp  test_bvec_density.cpp  use_bvec.cpp
node/fastbit_addon/: binding.gyp  fb.js
node/features/: gffparser.js
perl/: gff_2_FastBit.pl  load_FastBit.pl
perl/FastBit/: Loader.pm
preprocessing/: Makefile  Makefile.am  Makefile.in  split_nt.cpp  split_nt.pl
src/: Makefile.am  Makefile.in  bvec32.cpp  kmerizer.cpp  kmerizer.h  loadBED.cpp  stacker.cpp
src/addons/: binding.gyp  fb.cc  fb.js
src/bitmap/: Makefile.am  Makefile.in  bitSlicedIndex.hpp  bitmap.cpp  bitmap.h  bitmap.tpp  bitvector.h  bitvector.hpp  bitvector.tpp  lcbitSlicedIndex.hpp  rangeEncodedIndex.hpp  test_transpose.cpp
src/boost/threadpool/: task_adaptors.hpp
src/bvec/: Makefile.am  Makefile.in  bvec.cpp  bvec.h  bvec32.cpp  bvec32.h  bvec64.cpp  bvec64.h  count16mers.cpp  count16mers_mem.cpp  count32mers.cpp  fq_16to32kmers.cpp  fq_kmers.cpp  reverse_complement_lut.pl  riwah.h  use_bvec.cpp
src/countkmers/: Makefile.am  Makefile.in  bvec.h  bvec32.cpp  bvec32.h  bvec64.cpp  bvec64.h  count16mers_mem.cpp  count32mers.cpp  fq_16to32kmers.cpp  fq_kmers.cpp  reverse_complement_lut.pl  use_bvec.cpp
src/fastbit/: Makefile.am  Makefile.in  loadBED.cpp  playground.cpp
src/fastbit/node/fastbit_addon/: binding.gyp  fb.cc  fb.js  testfb.js
src/fastbit/node/features/: README.md  gffparser.js
src/fastbit/node/ontologies/: README.md
src/kmerizer/: Makefile.am  Makefile.in  README.md  kcount.cpp  kmerizer.cpp  kmerizer.h  kmerizer.tpp  packmers64.cpp
src/node/ontologies/: obo2json.js
src/preprocessing/: Makefile.am  Makefile.in  split_nt.cpp  split_nt.pl
src/programs/: Makefile.am  Makefile.in  histo.cpp  kcount.cpp
src/util/: Makefile.am  Makefile.in  freqmap.cpp  freqmap.h
test/: Makefile.am  Makefile.in  bvec_density.cpp  histo.test  kmerize.cpp  serialize.cpp  test-bvec.cpp  test-freqmap.cpp  test-kmerizer.cpp  test.h
test/data/: genes.gtf
test_data/: gene_ontology_obo_100terms.obo
